A bit of polishing

--- a/notebooks/CS/CS-J3D-DVR.ipynb
+++ b/notebooks/CS/CS-J3D-DVR.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CS/DVR: step 1 and 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +15,7 @@
    "source": [
     "import numpy as np\n",
     "from numpy.linalg import eigvals\n",
+    "from scipy.optimize import minimize\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "matplotlib.use('Qt5Agg')\n",
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +36,7 @@
     "sys.path.append('../../Python_libs')\n",
     "import dvr\n",
     "from jolanta import Jolanta_3D\n",
-    "from captools import simple_traj_der"
+    "from captools import simple_traj_der, five_point_derivative"
    ]
   },
   {
@@ -69,12 +77,11 @@
      "output_type": "stream",
      "text": [
       "  1   -0.26351131 au =     -7.17051 eV\n",
-      "  2    0.01683168 au =      0.45801 eV\n",
-      "  3    0.05606363 au =      1.52557 eV\n",
-      "  4    0.10555774 au =      2.87237 eV\n",
-      "  5    0.12662372 au =      3.44561 eV\n",
-      "  6    0.18685288 au =      5.08453 eV\n",
-      "  7    0.26221360 au =      7.13520 eV\n"
+      "  2    0.02918102 au =      0.79406 eV\n",
+      "  3    0.09074913 au =      2.46941 eV\n",
+      "  4    0.12080260 au =      3.28721 eV\n",
+      "  5    0.18417311 au =      5.01161 eV\n",
+      "  6    0.27654358 au =      7.52513 eV\n"
      ]
     }
    ],
@@ -84,7 +91,7 @@
     "#  then show the density of states\n",
     "#  in a potential + energy-levels plot\n",
     "#\n",
-    "xmax=30\n",
+    "xmax=25\n",
     "xmin=0   # grid from -xmin to xmax\n",
     "thresh = 7   # maximum energy for state in the plot in eV\n",
     "ppB = 15     # grid points per Bohr\n",
@@ -120,54 +127,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two helper functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ECS(alpha, theta):\n",
+    "    \"\"\" diag H(alpha*exp(i*theta)) and return eigenvalues \"\"\"\n",
+    "    eta=alpha*np.exp(1j*theta)\n",
+    "    Vs = Jolanta_3D(xs*eta, jparam)\n",
+    "    H_theta = Ts/eta**2 + np.diag(Vs)\n",
+    "    return eigvals(H_theta)\n",
+    "\n",
+    "def near_E(alpha, theta, E_near):\n",
+    "    \"\"\" diag H(alpha*exp(i*theta)) and return eigenvalue near E_near \"\"\"\n",
+    "    Es = ECS(alpha, theta)\n",
+    "    j = np.argmin(np.abs(Es - E_near))\n",
+    "    return Es[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta = 0.436332\n"
+      "0 (-7.17048676323494-2.757442235297604e-05j)\n",
+      "1 (0.12319575418222453-0.6447856747464203j)\n",
+      "2 (0.6769051073757529-2.510872946805203j)\n",
+      "3 (2.2813269896572237-5.036498142249488j)\n",
+      "4 (3.1729350979582995-0.16086331778407406j)\n",
+      "5 (4.8475998455820974-8.113277014269515j)\n",
+      "6 (7.513829958365812-4.717125131061044j)\n",
+      "7 (8.121591146545715-11.38052093763252j)\n",
+      "8 (11.32008035953136-13.287205284627333j)\n",
+      "9 (13.083027798587672-16.59321807868231j)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(-2, 0.5)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\" complex diagonalization example \"\"\"\n",
     "\n",
     "theta=25.0/180.0*np.pi\n",
-    "print(\"theta = %f\" % (theta))\n",
-    "Vs = Jolanta_3D(xs*np.exp(1j*complex(theta)), jparam)\n",
-    "H_theta = np.exp(-2j*complex(theta)) * Ts + np.diag(Vs)\n",
-    "energies = eigvals(H_theta)\n",
+    "energies = ECS(1.0, theta)\n",
     "energies.sort()\n",
-    "energies[:20]*au2eV\n",
+    "energies *= au2eV\n",
+    "for i in range(10):\n",
+    "    print(i, energies[i])\n",
     "plt.cla()\n",
-    "plt.plot(energies.real*au2eV, energies.imag*au2eV, 'o')\n",
+    "plt.plot(energies.real, energies.imag, 'o')\n",
     "plt.xlim(-8,10)\n",
-    "plt.ylim(-2,0.5)"
+    "plt.ylim(-2,0.5)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For small $\\theta$ everything is fine, but for larger angles basis set artifacts become apparent = there are eigenvalues off the rotation string with small real and hige imaginary part. Thus, above some $\\theta$, sorting the eigenvalue by low real part stops working as a filter. "
+    "For small $\\theta$ everything is fine, but for larger angles basis set artifacts become apparent = there are eigenvalues off the rotation string with small real and huge imaginary part. Thus, above some $\\theta$, sorting the eigenvalue by low real part stops working as a filter. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,9 +235,7 @@
     "\n",
     "for i_theta in range(n_theta):\n",
     "    theta=thetas[i_theta]/180.0*np.pi\n",
-    "    Vs = Jolanta_3D(xs*np.exp(1j*complex(theta)), jparam)\n",
-    "    H_theta = np.exp(-2j*complex(theta)) * Ts + np.diag(Vs)\n",
-    "    energies = eigvals(H_theta)\n",
+    "    energies = ECS(1.0, theta)\n",
     "    energies.sort()\n",
     "    run_data[i_theta,:] = energies[0:n_keep]\n",
     "    #run_data[:,i_theta] = energies[0:n_keep]\n",
@@ -224,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,29 +342,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -179.99980238441225\n",
-      "1 -105.68845920485826\n",
-      "2 -114.15405497496475\n",
-      "3 -114.46044686754207\n",
-      "4 -2.9020156944302453\n",
-      "5 -98.1668419877256\n",
-      "6 -101.11743002992317\n",
-      "7 -32.10968523480819\n",
-      "8 -98.4560292763116\n",
-      "9 -98.01144437707109\n",
-      "10 -52.29813241727825\n",
-      "11 -96.33500132733968\n",
-      "12 -92.28516799540056\n",
-      "13 -63.17563466846886\n",
-      "14 -90.97816746794189\n",
-      "Minimum angle index: 4\n"
+      "0 -179.99980264790037\n",
+      "1 -114.86693835412485\n",
+      "2 -122.97131985558339\n",
+      "3 -2.90201435259857\n",
+      "4 -101.3736921632065\n",
+      "5 -32.109685024747904\n",
+      "6 -104.59355491505079\n",
+      "7 -95.13707394048981\n",
+      "8 -52.29813433621948\n",
+      "9 -93.21931421284157\n",
+      "10 -63.17564494933142\n",
+      "11 -63.17564494933142\n",
+      "12 -87.11382163838118\n",
+      "13 -70.16399195953744\n",
+      "14 -87.11382163838118\n",
+      "Minimum angle index: 3\n"
      ]
     }
    ],
@@ -345,73 +376,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_traj = trajectories[:,4]\n",
+    "res_traj = trajectories[:,3]\n",
     "abs_der = np.abs(simple_traj_der(thetas, res_traj))\n",
     "plt.cla()\n",
     "plt.plot(thetas, np.log(abs_der), 'o-')\n",
+    "plt.xlabel(r'$\\theta$')\n",
+    "plt.ylabel(r'$\\ln|dE/d\\theta|$')\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Energy, $\\theta_{opt}$, and stability for $\\alpha=1$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34 34\n",
-      "resonance (3.1729556212701966-0.16084889558781004j)\n",
-      "abs_der 1.4360534078713517e-06\n",
-      "change down (-1.4354245561065682e-06+2.766522097519264e-08j)\n",
-      "change up (1.4358934654623567e-06+6.092757803832782e-08j)\n"
+      "theta_opt 39\n",
+      "E_res (3.1729627262865874-0.16084768159778406j)\n",
+      "dE/dtheta 1.4402761214424823e-06\n",
+      "delta-E down (-1.4049190060205774e-06-3.1717170825840135e-07j)\n",
+      "delta-E up   (1.3641803864317126e-06+4.161990286022377e-07j)\n"
      ]
     }
    ],
    "source": [
-    "#\n",
-    "#  get a feeling for the stabilitity of the value\n",
-    "#\n",
     "j_opt = np.argmin(abs_der)\n",
     "if j_opt == len(thetas)-1:\n",
     "    j_opt -= 1\n",
-    "print(j_opt, thetas[j_opt])\n",
-    "print('resonance', res_traj[j_opt])\n",
-    "print('abs_der', abs_der[j_opt])\n",
-    "print('change down', res_traj[j_opt-1]-res_traj[j_opt])\n",
-    "print('change up', res_traj[j_opt+1]-res_traj[j_opt])"
+    "theta_opt = thetas[j_opt]\n",
+    "Eres=res_traj[j_opt]\n",
+    "print('theta_opt', thetas[j_opt])\n",
+    "print('E_res', res_traj[j_opt])\n",
+    "print('dE/dtheta', abs_der[j_opt])\n",
+    "print('delta-E down', res_traj[j_opt-1]-res_traj[j_opt])\n",
+    "print('delta-E up  ', res_traj[j_opt+1]-res_traj[j_opt])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimize $\\eta=\\alpha\\,\\exp(i\\theta)$\n",
+    "\n",
+    "* Define the objective $\\vert dE/dz\\vert$ using average central derivatives.\n",
+    "* Find its minimum using simplex minimization.\n",
+    "\n",
+    "However, even though $\\eta$ changes quite a bit and $\\vert dE/dz\\vert$ decreases quite a lot, $E_{res}$ is essentially constant."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(eta, dx, E_near, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Input: \n",
+    "        eta: (alpha, theta); z = alpha*exp(i*theta)\n",
+    "        dx:  numerical derivatives using z +/- dx or idx\n",
+    "        E_near: select the eigenvalue nearest to this energy  \n",
+    "    Output: \n",
+    "        dE/dz along Re(z), dE/dz along Im(z) for the state near E_near\n",
+    "    This requires four single points.\n",
+    "    \"\"\"\n",
+    "    a, t = eta\n",
+    "    z0 = a*np.exp(1j*t)\n",
+    "    es = np.zeros(2, complex)\n",
+    "    zs = np.array([z0-dx, z0+dx])\n",
+    "    for i, z in enumerate(zs):\n",
+    "        a, t = np.abs(z), np.angle(z)\n",
+    "        es[i] = near_E(a, t, E_near)\n",
+    "    dEdz_re = (es[1] - es[0])/(2*dx)\n",
+    "    zs = [z0-1j*dx, z0+1j*dx]\n",
+    "    for i, z in enumerate(zs):\n",
+    "        a, t = np.abs(z), np.angle(z)\n",
+    "        es[i] = near_E(a, t, E_near)\n",
+    "    dEdz_im = (es[1] - es[0])/(2j*dx)\n",
+    "    if verbose:\n",
+    "        print(dEdz_re)\n",
+    "        print(dEdz_im)\n",
+    "    return np.abs(0.5*(dEdz_re + dEdz_im)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1.229734536423166e-06-2.746350224059474e-06j)\n",
+      "(-1.2323924459059499e-06-2.749129306145459e-06j)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "41"
+       "3.0109120106711237e-06"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(thetas)"
+    "alpha_curr=1.0\n",
+    "theta_curr=theta_opt/180.0*np.pi\n",
+    "dx=0.001\n",
+    "E_find = Eres/au2eV\n",
+    "objective((alpha_curr, theta_curr), dx, E_find, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For DVR, finding $\\eta_{opt}=\\alpha_{opt}\\exp(i\\theta_{opt})$ *via* minimization is very slow. Computing $E_{res}$ on a grid and interpolating should be much faster."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p0= [1.0, 0.6806784082777886]\n",
+      "Eres0= (3.1729627262865874-0.16084768159778406j)\n",
+      "f0= 3.0109120106711237e-06\n",
+      "Optimization terminated successfully.\n",
+      "[0.9415283  0.70868483]\n",
+      "8.656724926280831e-09\n",
+      "Eres= (3.1729630104542235-0.16084352057881723j)\n",
+      "Energy change= (2.8416763608873907e-07+4.161018966830632e-06j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "args=(dx, E_find)\n",
+    "p0=[alpha_curr, theta_curr]\n",
+    "print('p0=', p0)\n",
+    "print('Eres0=', near_E(alpha_curr, theta_curr, E_find)*au2eV)\n",
+    "print('f0=', objective(p0, dx, E_find))\n",
+    "res=minimize(objective, p0, args=args, method=\"Nelder-Mead\")\n",
+    "print(res.message)\n",
+    "print(res.x)\n",
+    "print(res.fun)\n",
+    "Eopt=near_E(res.x[0], res.x[1], E_find)*au2eV\n",
+    "print('Eres=', Eopt)\n",
+    "print('Energy change=', Eopt-Eres)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": []
   }
  ],
