--- a/notebooks/CS/CS_J3D-GTO.ipynb
+++ b/notebooks/CS/CS_J3D-GTO.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Complex scalilng with Gaussian basis sets"
+    "### CS/GTO: step 1 and 2"
    ]
   },
   {
@@ -24,6 +24,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy.linalg import eig, eigh, eigvals, eigvalsh\n",
+    "from scipy.optimize import minimize\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "matplotlib.use('Qt5Agg')\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
     "#\n",
     "import sys\n",
     "sys.path.append('../../Python_libs')\n",
-    "from captools import simple_traj_der\n",
+    "from captools import simple_traj_der, five_point_derivative \n",
     "from GTO_basis import GBR\n",
     "from jolanta import Jolanta_3D"
    ]
@@ -87,20 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traj_GTO_TZ.csv\n"
+      "Traj_GTO_DZ.csv\n"
      ]
     }
    ],
    "source": [
     "sets=['GTO_unc', 'GTO_DZ', 'GTO_TZ']\n",
-    "bas = sets[2]\n",
+    "bas = sets[1]\n",
     "nval=10\n",
     "a0=17.0\n",
     "s=2\n",
@@ -129,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E0 = -7.170439   Emax = 7.526354\n",
+      "E0 = -7.170439   Emax = 3.532459\n",
       "      alpha         r0=1/sqrt(alpha)     Norm\n",
       "   1.70000000e+01    2.42535625e-01    1.0070e+02\n",
       "   8.50000000e+00    3.42997170e-01    4.2341e+01\n",
@@ -184,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E0 = -7.170445   Emax = 12.806117\n"
+      "E0 = -7.170445   Emax = 8.131068\n"
      ]
     }
    ],
@@ -234,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "if False:\n",
-    "    theta=10.0/180.0*np.pi\n",
+    "    theta=8.0/180.0*np.pi\n",
     "    print(\"theta = %f\" % (theta))\n",
-    "    H_theta = Bas.H_theta(theta)\n",
+    "    H_theta = Bas.H_theta(theta, 1.01)\n",
     "    energies = eigvals(H_theta, b=S)\n",
     "    energies.sort()\n",
     "    energies*=au2eV\n",
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +291,7 @@
     "\n",
     "for i, tdeg in enumerate(thetas):\n",
     "    theta = tdeg/180.0*np.pi\n",
-    "    H_theta = Bas.H_theta(theta)\n",
+    "    H_theta = Bas.H_theta(theta, 1.0)\n",
     "    energies = au2eV * eigvals(H_theta, b=S)\n",
     "    energies.sort()\n",
     "    run_data[i,:] = energies[0:n_keep]\n",
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,48 +380,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the box below or the Traj-analysis notebook\n",
-    "\n",
-    "### DVR reference value\n",
-    "* (3.1729556212701966-0.16084889558781004j)\n",
-    "* derivative:   (-1.4354245561065682e-06+2.766522097519264e-08j)\n",
-    "* 1 deg change: (1.4358934654623567e-06+6.092757803832782e-08j)"
+    "Energy, $\\theta_{opt} $, and stability for $\\alpha=1$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29 4.64\n",
-      "(3.099076491793533-0.06820716073493643j)\n",
-      "(6.816480375926304e-05+0.0004275374599530396j)\n",
-      "(-0.00024872015692078975-0.0003456555770968983j)\n",
-      "| 3.099076  | -0.068207 | 4.64 | 2.6e-03 |\n"
+      "theta_opt 2.24\n",
+      "E_res (3.101767458919995-0.05062156150133198j)\n",
+      "dE/dtheta 0.024099782575479352\n",
+      "delta-E down (-0.00261836418554795+0.002831862250229744j)\n",
+      "delta-E up   (0.002816948790282492-0.002633140077607461j)\n"
      ]
     }
    ],
    "source": [
     "j_opt = np.argmin(abs_der)\n",
-    "print(j_opt, thetas[j_opt])\n",
-    "Eres = es[j_opt]\n",
-    "print(Eres)\n",
-    "print(es[j_opt-1]-Eres)\n",
-    "print(es[j_opt+1]-Eres)\n",
-    "format='| %.6f  | %.6f | %.2f | %.1e |'\n",
-    "print(format % (Eres.real, Eres.imag, thetas[j_opt], abs_der[j_opt]))"
+    "if j_opt == len(thetas)-1:\n",
+    "    j_opt -= 1\n",
+    "theta_opt = thetas[j_opt]\n",
+    "Eres=es[j_opt]\n",
+    "print('theta_opt', thetas[j_opt])\n",
+    "print('E_res', Eres)\n",
+    "print('dE/dtheta', abs_der[j_opt])\n",
+    "print('delta-E down', es[j_opt-1]-es[j_opt])\n",
+    "print('delta-E up  ', es[j_opt+1]-es[j_opt])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimize $\\eta=\\alpha\\,\\exp(i\\theta)$\n",
+    "\n",
+    "Not really worth it as the change in $E_{res}$ is neglible."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def objective(eta, dx, E_near, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Input: \n",
+    "        eta: (alpha, theta); z = alpha*exp(i*theta)\n",
+    "        dx:  numerical derivatives using z +/- dx or idx\n",
+    "        E_near: select the eigenvalue nearest to this energy  \n",
+    "    Output: \n",
+    "        dE/dz along Re(z), dE/dz along Im(z) for the state near E_near\n",
+    "    This requires four single points.\n",
+    "    \"\"\"\n",
+    "    a, t = eta\n",
+    "    z0 = a*np.exp(1j*t)\n",
+    "    es = np.zeros(2, complex)\n",
+    "    zs = np.array([z0-dx, z0+dx])\n",
+    "    for i, z in enumerate(zs):\n",
+    "        a, t = np.abs(z), np.angle(z)\n",
+    "        es[i] = near_E(a, t, E_near)\n",
+    "    dEdz_re = (es[1] - es[0])/(2*dx)\n",
+    "    zs = [z0-1j*dx, z0+1j*dx]\n",
+    "    for i, z in enumerate(zs):\n",
+    "        a, t = np.abs(z), np.angle(z)\n",
+    "        es[i] = near_E(a, t, E_near)\n",
+    "    dEdz_im = (es[1] - es[0])/(2j*dx)\n",
+    "    if verbose:\n",
+    "        print(dEdz_re)\n",
+    "        print(dEdz_im)\n",
+    "    return np.abs(0.5*(dEdz_re + dEdz_im)) \n",
+    "\n",
+    "def ECS(alpha, theta):\n",
+    "    \"\"\" diag H(alpha*exp(i*theta)) and return eigenvalues \"\"\"\n",
+    "    H_theta = Bas.H_theta(theta, alpha)\n",
+    "    return eigvals(H_theta, b=S)\n",
+    "\n",
+    "def near_E(alpha, theta, E_near):\n",
+    "    \"\"\" diag H(alpha*exp(i*theta)) and return eigenvalue near E_near \"\"\"\n",
+    "    Es = ECS(alpha, theta)\n",
+    "    j = np.argmin(np.abs(Es - E_near))\n",
+    "    return Es[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-0.03737330314872861-0.03432863475476484j)\n",
+      "(-0.037364361117393816-0.03433062622051897j)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.05074399614148398"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_curr=1.0\n",
+    "theta_curr=theta_opt/180.0*np.pi\n",
+    "dx=0.001\n",
+    "E_find = Eres/au2eV\n",
+    "objective((alpha_curr, theta_curr), dx, E_find, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p0= [1.0, 0.039095375244672985]\n",
+      "Eres0= (3.101767458919995-0.05062156150133198j)\n",
+      "f0= 0.05074399614148398\n",
+      "Optimization terminated successfully.\n",
+      "[0.96174685 0.05989762]\n",
+      "3.444752012908777e-05\n",
+      "Eres= (3.1287645975981357-0.03710581764898615j)\n",
+      "Energy change= (0.026997138678140686+0.01351574385234583j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "args=(dx, E_find)\n",
+    "p0=[alpha_curr, theta_curr]\n",
+    "print('p0=', p0)\n",
+    "print('Eres0=', near_E(alpha_curr, theta_curr, E_find)*au2eV)\n",
+    "print('f0=', objective(p0, dx, E_find))\n",
+    "res=minimize(objective, p0, args=args, method='Nelder-Mead')\n",
+    "print(res.message)\n",
+    "print(res.x)\n",
+    "print(res.fun)\n",
+    "Eopt=near_E(res.x[0], res.x[1], E_find)*au2eV\n",
+    "print('Eres=', Eopt)\n",
+    "print('Energy change=', Eopt-Eres)"
+   ]
   },
   {
    "cell_type": "code",
