--- a/notebooks/CS/CS-J1D.ipynb
+++ b/notebooks/CS/CS-J1D.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Complex scaling for a 1D-Jolanta potential"
+    "### Ancient: CS for the 1D-potential"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "#  extend path by location of the dvr package\n",
     "#\n",
     "import sys\n",
-    "sys.path.append('../../Jolanta-by-dvr/Python_libs')\n",
+    "sys.path.append('../../Python_libs')\n",
     "import dvr\n",
     "from jolanta import Jolanta_1Db\n",
     "import read_write"
