--- a/notebooks/GTO_integrals/GTO_3D_P.ipynb
+++ b/notebooks/GTO_integrals/GTO_3D_P.ipynb
@@ -86,6 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>\n",
+    "\n",
+    "### Theory  (Fingers crossed)\n",
     "We don't solve the radial equation for $R(r)$, but rather for $u(r) = r \\cdot R(r)$.\n",
     "So, if $R$ is a s-function, $u$ is a p-function, and if $R$ is a p-function, $u$ is a d-function, etc. <br>\n",
     "\n",
@@ -682,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
