--- a/notebooks/GTO_integrals/W_int_test.ipynb
+++ b/notebooks/GTO_integrals/W_int_test.ipynb
@@ -28,17 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "cd582f34-7a47-44c3-8427-3f96b84f29c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#quad?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "d24d14de",
    "metadata": {},
    "outputs": [
@@ -60,8 +50,7 @@
     "for a1 in a1s:\n",
     "    for a2 in a2s:\n",
     "        result = quad(lambda x: x**4*np.exp(-(a1+a2)*x**2) * (x-rc)**2, rc, np.inf)\n",
-    "        print(a1,a2,result[0]-Jolanta_3D_Wcap(a1+a2, rc))\n",
-    "        #print(a1,a2,result)"
+    "        print(a1,a2,result[0]-Jolanta_3D_Wcap(a1+a2, rc))"
    ]
   },
   {
