--- a/notebooks/RAC_3D/RAC-GTO-J3D.ipynb
+++ b/notebooks/RAC_3D/RAC-GTO-J3D.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RAC step 1 in a GTO basis\n",
+    "# RAC/GBR: step 1\n",
     "\n",
     "Three artifical stabilizing potentials:\n",
     "1. Increase of the Jolanta parameter *b*\n",
