--- a/notebooks/Stab_3D/Stab-DVR.ipynb
+++ b/notebooks/Stab_3D/Stab-DVR.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stabilization plot via DVR box-size"
+    "## Stabilization/DVR: step 1"
    ]
   },
   {
@@ -171,6 +171,7 @@
     "run_data = np.zeros((n_s, nEs_keep))  # array used to collect the energies\n",
     "dc_data  = np.zeros((n_s, nEs_keep))  # array used to collect the DC energies\n",
     "\n",
+    "do_DC=False\n",
     "\n",
     "for i in range(n_s):\n",
     "    xmax=1/np.sqrt(slist[i])\n",
@@ -180,7 +181,16 @@
     "    Vs = Jolanta_3D(xs, jparam)\n",
     "    Ts = dvr.KineticEnergy(1, xmin, xmax, nGrid)\n",
     "    energy, wf= dvr.DVRDiag2(nGrid, Ts, Vs, wf=True)\n",
-    "    run_data[i,:] = energy[0:nEs_keep]        \n",
+    "    run_data[i,:] = energy[0:nEs_keep]\n",
+    "\n",
+    "    if do_DC:\n",
+    "        C = wf[:,1:]\n",
+    "        TC = np.matmul(Ts,C)\n",
+    "        Tprime = np.matmul(C.transpose(),TC)\n",
+    "        V0s=np.zeros(nGrid-1)  # no potential for DC states\n",
+    "        energy = dvr.DVRDiag2(nGrid, Tprime, V0s)\n",
+    "        dc_data[i,:] = energy[0:nEs_keep]\n",
+    "        \n",
     "    print(i+1, end=\" \")\n",
     "    if (i+1)%10==0:\n",
     "        print()\n",
@@ -220,7 +230,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "# copy the nEs lowest states from run_data to stab_data\n",
+    "# copy the nEs lowest odd states from run_data to stab_data\n",
     "#\n",
     "nEs=6\n",
     "stab_data = np.zeros((n_s,nEs+2))\n",
