--- a/notebooks/Stab_3D/Stab-GTO.ipynb
+++ b/notebooks/Stab_3D/Stab-GTO.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stabilization plot via Exponent Scaling"
+    "### Stabilization *via* GTO exponent scaling: step 1"
    ]
   },
   {
