--- a/notebooks/CAP_3D/CAP_J3D-GTO.ipynb
+++ b/notebooks/CAP_3D/CAP_J3D-GTO.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CAP/GBR"
+    "## CAP/GBR step 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_plots=True"
+    "show_plots=False"
    ]
   },
   {
@@ -83,20 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traj_GTO_TZ_7.csv\n"
+      "Traj_GTO_unc_5.csv\n"
      ]
     }
    ],
    "source": [
     "sets=['GTO_unc', 'GTO_DZ', 'GTO_TZ']\n",
-    "bas = sets[2]\n",
+    "bas = sets[0]\n",
     "nval=10\n",
     "a0=17.0\n",
     "s=2\n",
@@ -112,6 +112,7 @@
     "    print('No such basis.')\n",
     "\n",
     "rc=7 # start for the CAP\n",
+    "rc=5\n",
     "fname = 'Traj_' + bas + '_' + str(rc) + '.csv'\n",
     "print(fname)"
    ]
@@ -126,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E0 = -7.170439   Emax = 7.526354\n"
+      "E0 = -7.170439   Emax = 2419.320761\n"
      ]
     }
    ],
@@ -170,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E0 = -7.170445   Emax = 12.806117\n"
+      "E0 = -7.170447   Emax = 2421.905980\n"
      ]
     }
    ],
@@ -211,17 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([7.88773491e-04, 1.55622760e-02, 7.33295233e-01, 3.21481773e+00,\n",
-       "       1.00955294e+01, 2.54624133e+01, 5.55012418e+01])"
+       "array([ 0.00000000e+000, -6.06589018e-186, -1.66336265e-093,\n",
+       "       -3.27559837e-047, -5.46638222e-024,  5.90510417e-012,\n",
+       "        5.37825528e-006,  6.84173269e-003,  3.43575779e-001,\n",
+       "        3.59316286e+000,  9.66794702e+000,  2.20063339e+001,\n",
+       "        4.47519311e+001,  8.42063227e+001])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote Traj_GTO_TZ_7.csv\n"
+      "Wrote Traj_GTO_unc_5.csv\n"
      ]
     }
    ],
@@ -364,6 +368,13 @@
    "source": [
     "### Analyze with traj_analysis.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
