--- a/notebooks/Stab_3D/Plateau_analysis.ipynb
+++ b/notebooks/Stab_3D/Plateau_analysis.ipynb
@@ -17,9 +17,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "#from scipy.optimize import minimize_scalar\n",
-    "#from scipy.optimize import root\n",
-    "#from pandas import Series, DataFrame\n",
+    "from scipy.optimize import minimize_scalar, root_scalar\n",
+    "from scipy import interpolate\n",
     "import pandas as pd\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,69 +89,63 @@
        "      <th>E4</th>\n",
        "      <th>E5</th>\n",
        "      <th>E6</th>\n",
-       "      <th>E7</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.825742</td>\n",
-       "      <td>0.300000</td>\n",
-       "      <td>-7.170448</td>\n",
-       "      <td>0.087908</td>\n",
-       "      <td>0.311252</td>\n",
-       "      <td>0.744851</td>\n",
-       "      <td>1.887052</td>\n",
-       "      <td>3.208072</td>\n",
-       "      <td>6.198476</td>\n",
+       "      <td>1.423025</td>\n",
+       "      <td>0.493827</td>\n",
+       "      <td>-7.170508</td>\n",
+       "      <td>0.159275</td>\n",
+       "      <td>0.523245</td>\n",
+       "      <td>1.098066</td>\n",
+       "      <td>1.858843</td>\n",
+       "      <td>2.728974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.795871</td>\n",
-       "      <td>0.310063</td>\n",
-       "      <td>-7.170447</td>\n",
-       "      <td>0.091174</td>\n",
-       "      <td>0.323694</td>\n",
-       "      <td>0.776332</td>\n",
-       "      <td>1.973841</td>\n",
-       "      <td>3.228715</td>\n",
-       "      <td>6.323012</td>\n",
+       "      <td>1.399532</td>\n",
+       "      <td>0.510545</td>\n",
+       "      <td>-7.170508</td>\n",
+       "      <td>0.165750</td>\n",
+       "      <td>0.545553</td>\n",
+       "      <td>1.144416</td>\n",
+       "      <td>1.933952</td>\n",
+       "      <td>2.814184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.767420</td>\n",
-       "      <td>0.320126</td>\n",
-       "      <td>-7.170447</td>\n",
-       "      <td>0.094467</td>\n",
-       "      <td>0.336242</td>\n",
-       "      <td>0.808294</td>\n",
-       "      <td>2.059987</td>\n",
-       "      <td>3.250052</td>\n",
-       "      <td>6.445424</td>\n",
+       "      <td>1.377166</td>\n",
+       "      <td>0.527263</td>\n",
+       "      <td>-7.170508</td>\n",
+       "      <td>0.172307</td>\n",
+       "      <td>0.568155</td>\n",
+       "      <td>1.191240</td>\n",
+       "      <td>2.009268</td>\n",
+       "      <td>2.890628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.740279</td>\n",
-       "      <td>0.330189</td>\n",
-       "      <td>-7.170447</td>\n",
-       "      <td>0.097789</td>\n",
-       "      <td>0.348895</td>\n",
-       "      <td>0.840741</td>\n",
-       "      <td>2.145085</td>\n",
-       "      <td>3.272481</td>\n",
-       "      <td>6.565790</td>\n",
+       "      <td>1.355838</td>\n",
+       "      <td>0.543981</td>\n",
+       "      <td>-7.170508</td>\n",
+       "      <td>0.178946</td>\n",
+       "      <td>0.591050</td>\n",
+       "      <td>1.238525</td>\n",
+       "      <td>2.084680</td>\n",
+       "      <td>2.956664</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.714352</td>\n",
-       "      <td>0.340252</td>\n",
-       "      <td>-7.170447</td>\n",
-       "      <td>0.101138</td>\n",
-       "      <td>0.361654</td>\n",
-       "      <td>0.873671</td>\n",
-       "      <td>2.228683</td>\n",
-       "      <td>3.296428</td>\n",
-       "      <td>6.684194</td>\n",
+       "      <td>1.335472</td>\n",
+       "      <td>0.560700</td>\n",
+       "      <td>-7.170508</td>\n",
+       "      <td>0.185668</td>\n",
+       "      <td>0.614238</td>\n",
+       "      <td>1.286256</td>\n",
+       "      <td>2.160057</td>\n",
+       "      <td>3.011986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,36 +153,41 @@
       ],
       "text/plain": [
        "          L         z        E1        E2        E3        E4        E5  \\\n",
-       "0  1.825742  0.300000 -7.170448  0.087908  0.311252  0.744851  1.887052   \n",
-       "1  1.795871  0.310063 -7.170447  0.091174  0.323694  0.776332  1.973841   \n",
-       "2  1.767420  0.320126 -7.170447  0.094467  0.336242  0.808294  2.059987   \n",
-       "3  1.740279  0.330189 -7.170447  0.097789  0.348895  0.840741  2.145085   \n",
-       "4  1.714352  0.340252 -7.170447  0.101138  0.361654  0.873671  2.228683   \n",
+       "0  1.423025  0.493827 -7.170508  0.159275  0.523245  1.098066  1.858843   \n",
+       "1  1.399532  0.510545 -7.170508  0.165750  0.545553  1.144416  1.933952   \n",
+       "2  1.377166  0.527263 -7.170508  0.172307  0.568155  1.191240  2.009268   \n",
+       "3  1.355838  0.543981 -7.170508  0.178946  0.591050  1.238525  2.084680   \n",
+       "4  1.335472  0.560700 -7.170508  0.185668  0.614238  1.286256  2.160057   \n",
        "\n",
-       "         E6        E7  \n",
-       "0  3.208072  6.198476  \n",
-       "1  3.228715  6.323012  \n",
-       "2  3.250052  6.445424  \n",
-       "3  3.272481  6.565790  \n",
-       "4  3.296428  6.684194  "
+       "         E6  \n",
+       "0  2.728974  \n",
+       "1  2.814184  \n",
+       "2  2.890628  \n",
+       "3  2.956664  \n",
+       "4  3.011986  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#df = pd.read_csv(\"DVR_stab_plot.csv\")\n",
+    "df = pd.read_csv(\"DVR_stab_plot.csv\")\n",
     "#df = pd.read_csv(\"GTO_unc_stab_plot.csv\")\n",
     "#df = pd.read_csv(\"GTO_DZ_stab_plot.csv\")\n",
-    "df = pd.read_csv(\"GTO_TZ_stab_plot.csv\")\n",
+    "#df = pd.read_csv(\"GTO_TZ_stab_plot.csv\")\n",
+    "\n",
+    "#df=pd.read_csv(\"/home/thomas/Current_Work/Caroline/Glyoxal/Stab/E_geo0.csv\", delim_whitespace=True)\n",
+    "#df=pd.read_csv(\"/home/thomas/Current_Work/Caroline/Glyoxal/Stab/E_geo-1.csv\", delim_whitespace=True)\n",
+    "#df=pd.read_csv(\"/home/thomas/Current_Work/Caroline/Glyoxal/Stab/Z_geo0_cleaned.csv\")\n",
+    "#df=pd.read_csv(\"/home/thomas/Current_Work/Caroline/Glyoxal/Stab/Z_geo-1_cleaned.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,21 +220,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plateau center at z=0.214431\n",
-      "Crossings at z=0.069182 and z=0.345912\n",
-      "N = 28,  max n: 13\n"
+      "0.0 1.0\n",
+      "0.30833333333333335 -37.103068065958766\n"
      ]
     }
    ],
    "source": [
-    "lroot=4\n",
+    "xs=zs\n",
+    "lroot=3\n",
+    "ys=df[E_labels[lroot]].values\n",
+    "srch_range=(-1, -1)\n",
+    "drop=0.5\n",
+    "# def find_plateau(xs, ys, srch_range=(-1, -1), drop=0.5, smooth=0, alpha=True):\n",
+    "#     \"\"\"\n",
+    "#     find the plateau region of one root of a stabilization graph ys(xs)\n",
+    "#     - the left and right crossings are defined be min/max curvature \n",
+    "#     - the center is min(derivative) or curvature=0\n",
+    "#     Parameters:\n",
+    "#         xs : alphas or Ls\n",
+    "#         ys : Energy of the root\n",
+    "#         srch_range=(xmin, xmax): \n",
+    "#             search range; (-1,-1) is the whole range, can be used to slice the data \n",
+    "#         drop: plateau region starts when the curvature drops to this percentage of its max\n",
+    "#         smooth: parameter passed into the spline \n",
+    "#         alpha: root has positive slope (1/L^2 stabilization graph)\n",
+    "#     Returns: \n",
+    "#         success, \n",
+    "#         x_sel, y_sel:\n",
+    "#     \"\"\"\n",
+    "def der1(x, a, b, c):\n",
+    "    # spline = (a, b, c)\n",
+    "    return interpolate.splev(x, (a,b,c), der=1)\n",
+    "\n",
+    "def der2(x, a, b, c):\n",
+    "    # spline = (a, b, c)\n",
+    "    return interpolate.splev(x, (a,b,c), der=2)\n",
+    "\n",
+    "def mder2(x, a, b, c):\n",
+    "    # spline = (a, b, c)\n",
+    "    return -interpolate.splev(x, (a,b,c), der=2)\n",
+    "\n",
+    "trouble=True\n",
+    "# search range, normally xs[0,len(xs)]\n",
+    "xmin, xmax = srch_range\n",
+    "j0, j1 = 0, len(xs)\n",
+    "if xmin != -1:\n",
+    "    j0 = np.argmin(np.abs(xs-xmin))\n",
+    "if xmax != -1:\n",
+    "    j1 = np.argmin(np.abs(xs-xmax)) + 1\n",
+    "xuse, yuse = xs[j0:j1], ys[j0:j1]\n",
+    "xmin, xmax = xuse[0], xuse[-1]\n",
+    "step=xuse[1]-xuse[0]\n",
+    "print(xmin, xmax)\n",
+    "sp = interpolate.splrep(xuse, yuse, s=0)\n",
+    "d2s = interpolate.splev(xuse, sp, der=2)\n",
+    "\n",
+    "# Find the left crossing, xl, from min curvature \n",
+    "jl=np.argmin(d2s)\n",
+    "xl=xuse[jl]\n",
+    "res = minimize_scalar(der2, (xl-step, xl, xl+step), args=sp)\n",
+    "if res.success:\n",
+    "    xl = ref.x\n",
+    "else:\n",
+    "    trouble = True  \n",
+    "# Find the right crossing, xr, from max curvature \n",
+    "jr=np.argmax(d2s)\n",
+    "xr=xuse[jr]\n",
+    "res = minimize_scalar(mder2, (xr-step, xr, xr+step), args=sp)\n",
+    "if res.success:\n",
+    "    xr = res.x\n",
+    "else:\n",
+    "    trouble = True\n",
+    "\n",
+    "# between xl and xr, find the dropping points d2 = drop*min(d2)    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "if trouble:\n",
+    "    plt.cla()\n",
+    "    plt.plot(xuse,d2s,'o-')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30833333333333335"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plateau center at z=0.478218\n",
+      "Crossings at z=0.308333 and z=0.666667\n",
+      "N = 23,  max n: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "lroot=3\n",
     "zmin, zmax = -1, -1\n",
     "E_0=df[E_labels[lroot]].values\n",
     "d1s, d2s = st.der_and_curvature(zs,E_0)\n",
@@ -279,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -288,11 +396,11 @@
      "text": [
       "E = P/Q\n",
       "P :\n",
-      "        4        3        2\n",
-      "8474 x - 7409 x + 1962 x - 157.4 x + 3.814\n",
+      "         4         3         2\n",
+      "79.78 x - 162.2 x + 114.5 x - 32.63 x + 3.259\n",
       "Q :\n",
-      "        4        3         2\n",
-      "2689 x - 2302 x + 593.9 x - 45.2 x + 1\n"
+      "         4         3         2\n",
+      "25.73 x - 51.63 x + 35.99 x - 10.13 x + 1\n"
      ]
     }
    ],
@@ -335,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,15 +466,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dE/ds = (-0.021582725771307865-0.06777080136364597j)\n",
-      "E'/E'' = (0.017796884946345556-0.01026448932237077j)\n"
+      "dE/ds = (0.04617419124592006+0.10715286091836371j)\n",
+      "E'/E'' = (-0.005513550321611129+0.025434859797220374j)\n"
      ]
     }
    ],
@@ -376,7 +484,7 @@
     "#L_guess=0.13+1j*0.33  # DVR\n",
     "#L_guess=0.40+1j*0.22  # DVR\n",
     "#L_guess=0.26+1j*0.34  # GTO3\n",
-    "L_guess=0.2-1j*0.2  \n",
+    "L_guess=0.4-1j*0.2  \n",
     "\n",
     "\n",
     "der = pade.dEds(L_guess, P, Q)\n",
@@ -387,21 +495,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0  (0.1822031, -0.1897355)   (3.1863010, -0.1451942)\n",
-      "  1  (0.1850608, -0.1885619)   (3.1862825, -0.1451892)\n",
-      "  2  (0.1850064, -0.1885090)   (3.1862825, -0.1451892)\n",
-      "  3  (0.1850064, -0.1885090)   (3.1862825, -0.1451892)\n",
+      "  0  (0.4055136, -0.2254349)   (3.1737639, -0.1475754)\n",
+      "  1  (0.4070496, -0.2306210)   (3.1738118, -0.1475786)\n",
+      "  2  (0.4071519, -0.2307950)   (3.1738119, -0.1475786)\n",
+      "  3  (0.4071521, -0.2307951)   (3.1738119, -0.1475786)\n",
+      "  4  (0.4071521, -0.2307951)   (3.1738119, -0.1475786)\n",
       "\n",
       "Final results:\n",
-      "  L_star = (0.185006, -0.188509)\n",
-      "  Er = 3.186282,  Ei = -0.145189\n"
+      "  L_star = (0.407152, -0.230795)\n",
+      "  Er = 3.173812,  Ei = -0.147579\n"
      ]
     }
    ],
